@@ -3,6 +3,7 @@ package com.robertx22.mine_and_slash.error_checks.base;
 import com.robertx22.mine_and_slash.error_checks.AllGearsHavePossibleAffixCheck;
 import com.robertx22.mine_and_slash.error_checks.DunSameSeedAreSame;
 import com.robertx22.mine_and_slash.error_checks.IGuidFormatCheck;
+import com.robertx22.mine_and_slash.error_checks.TierReqIsLessThanMaxTier;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -16,6 +17,7 @@ public class ErrorChecks {
         list.add(new IGuidFormatCheck());
         list.add(new AllGearsHavePossibleAffixCheck());
         list.add(new DunSameSeedAreSame());
+        list.add(new TierReqIsLessThanMaxTier());
 
         return list;
 
