@@ -1,11 +1,13 @@
 package com.robertx22.mine_and_slash.new_content.data_processors;
 
+import com.robertx22.mine_and_slash.database.bosses.base.Boss;
 import com.robertx22.mine_and_slash.database.rarities.MobRarity;
 import com.robertx22.mine_and_slash.database.rarities.mobs.*;
 import com.robertx22.mine_and_slash.db_lists.Rarities;
 import com.robertx22.mine_and_slash.new_content.data_processors.bases.ChunkProcessData;
 import com.robertx22.mine_and_slash.new_content.data_processors.bases.SpawnedMob;
 import com.robertx22.mine_and_slash.new_content.registry.DataProcessor;
+import com.robertx22.mine_and_slash.registry.SlashRegistry;
 import com.robertx22.mine_and_slash.uncommon.utilityclasses.MobSpawnUtils;
 import com.robertx22.mine_and_slash.uncommon.utilityclasses.RandomUtils;
 import net.minecraft.entity.EntityType;
@@ -125,8 +127,24 @@ public class ComplexMobProcessor extends DataProcessor {
                 type = RandomUtils.weightedRandom(filter.collect(Collectors.toList())).type;
 
             }
+
+            Boss boss = null;
+
+            if (isBoss) {
+
+                if (data.getRoom().group.canSpawnFireMobs) {
+                    boss = SlashRegistry.Bosses()
+                        .random();
+                } else {
+                    boss = SlashRegistry.Bosses()
+                        .getFilterWrapped(x -> !x.isFire)
+                        .random();
+                }
+
+            }
+
             for (int i = 0; i < amount; i++) {
-                MobSpawnUtils.summon(type, world, pos, rarity, addPotion, isBoss);
+                MobSpawnUtils.summon(type, world, pos, rarity, addPotion, boss);
             }
 
         } catch (Exception e) {
