@@ -1,5 +1,6 @@
 package com.robertx22.mine_and_slash.uncommon.utilityclasses;
 
+import com.robertx22.mine_and_slash.database.bosses.base.Boss;
 import com.robertx22.mine_and_slash.database.rarities.MobRarity;
 import com.robertx22.mine_and_slash.database.rarities.mobs.EpicMob;
 import com.robertx22.mine_and_slash.database.rarities.mobs.LegendaryMob;
@@ -71,7 +72,7 @@ public class MobSpawnUtils {
         return minion;
     }
 
-    public static <T extends MobEntity> T summon(EntityType<T> type, IWorld world, BlockPos p, MobRarity rarity, boolean addPotion, boolean isBoss) {
+    public static <T extends MobEntity> T summon(EntityType<T> type, IWorld world, BlockPos p, MobRarity rarity, boolean addPotion, Boss boss) {
         Vec3d vec = new Vec3d(p);
         vec = vec.add(0.5F, 0, 0.5F);
 
@@ -84,7 +85,7 @@ public class MobSpawnUtils {
         Load.Unit(mob)
             .setRarity(rarity.Rank());
 
-        if (isBoss) {
+        if (boss != null) {
             Load.boss(mob)
                 .setBoss(SlashRegistry.Bosses()
                     .random());
